--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,7 +544,21 @@ section {
 --------------------------------------------------------------*/
 .about .content {
   background-color: #f6f9ff;
-  padding: 40px;
+  width: 100%;
+  max-height:450px;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  content: "";
+  position:relative;
+}
+.about .content:before {
+  content:'';
+    width:100%;
+    height:100%;    
+    position:absolute;
+    left:0;
+    top:0;
+    background:linear-gradient(transparent 350px, white);
 }
 
 .about h3 {
