--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,12 +544,13 @@ section {
 --------------------------------------------------------------*/
 .about .content {
   background-color: #f6f9ff;
-  width: 100%;
+  width: 90%;
   max-height:450px;
   overflow:hidden;
   text-overflow: ellipsis;
   content: "";
   position:relative;
+  padding: 10px;
 }
 .about .content:before {
   content:'';
@@ -604,6 +605,46 @@ section {
 
 .about .btn-read-more:hover i {
   transform: translateX(5px);
+}
+
+.about .flip-box {
+  background-color: transparent;
+  width: 500px;
+  height: 370px;
+  perspective: 1000px; 
+}
+
+.about .flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.about .flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.about .flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.about .flip-box-front {
+  /* background-color: #bbb; */
+  color: black;
+}
+
+.about .flip-box-back {
+  /* background-color: #f6f9ff; */
+  padding-top: 20px;
+  color: rgb(0, 0, 0);
+  transform: rotateY(180deg);
 }
 
 /*--------------------------------------------------------------
@@ -2408,4 +2449,8 @@ section {
   text-align: center;
   font-size: 13px;
   color: #012970;
+}
+
+.justify-content {
+  text-align: justify;
 }
