--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1150,7 +1150,7 @@ section {
 --------------------------------------------------------------*/
 .footer {
   background: #f6f9ff;
-  padding: 0 0 30px 0;
+  /* padding: 0 0 30px 0; */
   font-size: 14px;
 }
 
@@ -1205,8 +1205,10 @@ section {
 }
 
 .footer .footer-top {
-  background: white url(../img/footer-bg.png) no-repeat right top;
-  background-size: contain;
+  background: rgb(72, 66, 66) no-repeat top left;
+  background-image: url(../img/footer-bg-2.png);
+  background-size: 15%;
+  background-position: top right;
   border-top: 1px solid #e1ecff;
   border-bottom: 1px solid #e1ecff;
   padding: 60px 0 30px 0;
@@ -1228,6 +1230,7 @@ section {
 
 .footer .footer-top .footer-info .logo img {
   max-height: 80px;
+  margin-top: -25px;
 }
 
 .footer .footer-top .footer-info .logo span {
@@ -1243,26 +1246,35 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
+  color: #ffff;
   font-family: "Nunito", sans-serif;
+  margin-top: -10px;
 }
 
 .footer .footer-top .social-links a {
   font-size: 20px;
   display: inline-block;
-  color: rgba(1, 41, 112, 0.5);
+  color: #3597C1;
   line-height: 0;
   margin-right: 10px;
+  
+  padding-bottom: 12px;
+}
+.footer .footer-top .social-links span {
+  color: #ffffff;
   transition: 0.3s;
+  padding-left: 10px;
 }
 
-.footer .footer-top .social-links a:hover {
-  color: #287799;
+.footer .footer-top .social-links span:hover {
+  color: #3597C1;
+  
 }
 
 .footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #287799;
+  color: #ffffff;
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
@@ -1296,7 +1308,7 @@ section {
 }
 
 .footer .footer-top .footer-links ul a {
-  color: #287799;
+  color: #ffffff;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
