--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1031,12 +1031,11 @@ section {
 # Call to Action
 --------------------------------------------------------------*/
 #cta {
-  
   padding: 50px 0;
 }
 
 .cta-content {
-  background: linear-gradient(90deg, hsla(198, 57%, 48%, 1) 0%, hsla(204, 77%, 76%, 1) 100%);
+  background-color: inherit;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -1048,41 +1047,18 @@ section {
   margin: 0 auto;
 }
 
-
-.images {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-.left-image {
-  position: absolute;
-  top: 0;
-  left: -50px;
-  transform: rotate(10deg);
-}
-
-.right-image {
-  position: absolute;
-  bottom: -10px;
-  right: -50px;
-  transform: rotate(-10deg);
-}
-
 .cta-content h2 {
-  font-family: 'Arvo', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 36px;
-  font-weight: 700;
+  font-weight: 800;
   text-align: center;
-  color: #fff;
+  color: #3597C1;
   margin-bottom: 20px;
 }
 
 .cta-content p {
   font-size: 16px;
-  color: #ffffff;
+  color: #2a7b9e;
   text-align: center;
   line-height: 20px;
   margin-bottom: 30px;
@@ -1093,9 +1069,12 @@ section {
   margin-right: 10px;
 }
 
+.buttons {
+  text-align: center;
+}
+
 .btn {
   position: relative;
-  z-index: 1;
   display: inline-block;
   font-size: 14px;
   font-weight: 600;
