--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,8 +659,8 @@ section {
   margin-bottom: 30px;
 }
 
-.features .section-header .h4 {
-  font-size: 13px;
+#features h4 {
+  font-size: 15px;
 }
 
 .features .features-box {
@@ -700,7 +700,7 @@ section {
   font-weight: 500;
   text-align: center;
   line-height: 1.3;
-  margin: 0;
+  margin-bottom: 20px;
 }
 
 .features .features-box.blue .icon {
@@ -726,6 +726,13 @@ section {
   margin-left: 5px;
   font-size: 16px;
 }
+
+.read-more {
+  display: inline-block;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 
 /*--------------------------------------------------------------
 # issues
