--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1084,13 +1084,14 @@ section {
 # Call to Action
 --------------------------------------------------------------*/
 #cta {
+  background: linear-gradient(90deg, hsla(198, 57%, 48%, 1) 0%, hsla(204, 77%, 76%, 1) 100%);
   padding: 50px 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .cta-content {
-  background-color: inherit;
-  border-radius: 20px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1100,18 +1101,19 @@ section {
   margin: 0 auto;
 }
 
+
 .cta-content h2 {
   font-family: 'Open Sans', sans-serif;
   font-size: 36px;
   font-weight: 800;
   text-align: center;
-  color: #3597C1;
+  color: #fff;
   margin-bottom: 20px;
 }
 
 .cta-content p {
   font-size: 16px;
-  color: #2a7b9e;
+  color: #fff;
   text-align: center;
   line-height: 20px;
   margin-bottom: 30px;
