--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,8 +572,9 @@ section {
 }
 
 .about h2 {
-  font-size: 24px;
-  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+  font-size: 28px;
+  font-weight: 600;
   color: #2d7b9c;
 }
 
@@ -609,51 +610,67 @@ section {
   transform: translateX(5px);
 }
 
+/* Icon Box */
+.icon-box {
+  background: #fff;
+  text-align: center;
+  padding: 40px;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 30px;
+}
+
+.icon-box .icon {
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.icon-box .icon i {
+  font-size: 48px;
+  line-height: 1;
+  color: #ffbb2c;
+  transition: 0.5s;
+}
+
+.icon-box:hover .icon i {
+  color: #fff;
+}
+
+.icon-box .title {
+  text-align: left;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.icon-box .description {
+  text-align: left;
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.icon-box:hover {
+  transform: translateY(-10px);
+}
+
+@media (max-width: 991px) {
+  .icon-box {
+    padding: 20px;
+  }
+}
+
+
 .about .static-image img {
   border-radius: 10px;
-  width: 68%;
-  height: auto;
-}
-
-.about .flip-box {
-  background-color: transparent;
-  width: 700px;
-  height: 570px;
-  perspective: 1000px; 
-}
-
-.about .flip-box-inner {
-  position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
+  padding-left: 40px;
 }
 
-.about .flip-box:hover .flip-box-inner {
-  transform: rotateY(180deg);
-}
-
-.about .flip-box-front, .flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-
-.about .flip-box-front {
-  /* background-color: #bbb; */
-  color: black;
-}
-
-.about .flip-box-back {
-  /* background-color: #f6f9ff; */
-  padding-top: 20px;
-  color: rgb(0, 0, 0);
-  transform: rotateY(180deg);
-}
 
 /*--------------------------------------------------------------
 # Features
