--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,7 +546,7 @@ section {
 --------------------------------------------------------------*/
 .about .content {
   width: 90%;
-  max-height:450px;
+  max-height: 450px;
   overflow:hidden;
   text-overflow: ellipsis;
   content: "";
@@ -573,7 +573,7 @@ section {
 
 .about h2 {
   font-family: "Open Sans", sans-serif;
-  font-size: 28px;
+  font-size: 42px;
   font-weight: 600;
   color: #2d7b9c;
 }
@@ -620,14 +620,23 @@ section {
 }
 
 .icon-box .icon {
-  text-align: left;
+  background-color: #e6f7ff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  width: 60px;
   margin-bottom: 15px;
+  transition: all 0.3s ease-in-out;
 }
 
 .icon-box .icon i {
-  font-size: 48px;
+  font-size: 42px;
   line-height: 1;
-  color: #ffbb2c;
+  color: #64d2dc;
   transition: 0.5s;
 }
 
@@ -666,7 +675,7 @@ section {
 
 .about .static-image img {
   border-radius: 10px;
-  width: 100%;
+  width: 90%;
   height: 100%;
   padding-left: 40px;
 }
