--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -771,7 +771,7 @@ section {
 /*--------------------------------------------------------------
 # issues
 --------------------------------------------------------------*/
- .section-header {
+ .issues .section-header {
   text-align: center;
   display: flex;
   align-items: center;
@@ -785,55 +785,78 @@ section {
 	flex-direction: row;
 }
 
+/* Left column */
 .issues .left-column {
-	flex: 1;
-}
-
-.issues .right-column {
-	padding-left: 20px;
-	padding-right: 20px;
-	flex: 2;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	border-left: 1px solid #ccc;
-	border-radius: 0px 20px 20px 0px;
+  flex: 1;
+  padding: 20px;
+  
+  border-radius: 20px 0px 0px 20px;
 }
 
 .issues .list {
-	list-style: none;
-	padding: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .issues .list-item {
-	cursor: pointer;
-	padding: 10px;
-	border: 1px solid #ccc;
-	margin-bottom: 10px;
+  font-family: "Nunito", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.issues .list-item:hover {
+  background-color: #e6e6e6;
+}
+
+/* Right column */
+.issues .right-column {
+  padding: 20px;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.issues #item-details {
+  margin-bottom: 20px;
 }
 
 .issues .item {
-	display: none;
-	margin-top: 20px;
-	text-align: center;
+  display: none;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .issues .item.active {
-	display: block;
+  display: block;
+  background-color: #f7f7f7;
+  font-weight: bold;
+  border-left: 3px solid #2c3e50;
+  padding-left: 10px;
 }
 
 .issues .image {
-	width: 200px;
-	height: auto;
-	margin-bottom: 10px;
+  width: 350px;
+  height: auto;
+  margin-bottom: 10px;
+  
 }
 
 .issues .item p {
-	margin: 0;
-	padding: 10px;
-	border: 2px solid #ccc;
-	border-radius: 20px;
+  margin: 0;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 20px;
 }
+
 
 
 /*--------------------------------------------------------------
