suggest a few header style #23

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,13 +447,27 @@ section {
 # Hero Section
 --------------------------------------------------------------*/
 .hero {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.png) top center no-repeat;
-  background-size: cover;
 }
 
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/attendbos-header/4.png) top center no-repeat;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+}
+
+
 .hero h1 {
+  font-family: "Open Sans", sans-serif;
   margin: 0;
   font-size: 48px;
   font-weight: 700;
