--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,27 +447,13 @@ section {
 # Hero Section
 --------------------------------------------------------------*/
 .hero {
-  position: relative;
   width: 100%;
   height: 100vh;
-}
-
-.hero::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url(../img/attendbos-header/4.png) top center no-repeat;
+  background: url(../img/hero-bg.png) top center no-repeat;
   background-size: cover;
-  opacity: 0.5;
-  z-index: -1;
 }
-
 
 .hero h1 {
-  font-family: "Open Sans", sans-serif;
   margin: 0;
   font-size: 48px;
   font-weight: 700;
@@ -780,6 +766,159 @@ section {
   margin-top: 10px;
   margin-bottom: 20px;
 }
+
+/*--------------------------------------------------------------
+# Problem
+--------------------------------------------------------------*/
+.problem .content {
+  width: 90%;
+  max-height: 450px;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  content: "";
+  position:relative;
+  
+}
+
+.problem .content:before {
+  content:'';
+    width:100%;
+    height:100%;    
+    position:absolute;
+    left:0;
+    top:0;
+    background:linear-gradient(transparent 350px, white);
+}
+
+.problem h3 {
+  font-size: 14px;
+  font-weight: 700;
+  color: #3597C1;
+  text-transform: uppercase;
+}
+
+.problem h2 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 42px;
+  font-weight: 600;
+  color: #2d7b9c;
+}
+
+.problem p {
+  margin: 15px 0 30px 0;
+  line-height: 24px;
+}
+
+.problem .btn-read-more {
+  line-height: 0;
+  padding: 15px 40px;
+  border-radius: 4px;
+  transition: 0.5s;
+  color: #fff;
+  background: #3597C1;
+  box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
+}
+
+.problem .btn-read-more span {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+
+.problem .btn-read-more i {
+  margin-left: 5px;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.problem .btn-read-more:hover i {
+  transform: translateX(5px);
+}
+
+/* Icon Box */
+.icon-box {
+  background: #fff;
+  text-align: center;
+  padding: 40px;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 30px;
+  padding-right: 90px;
+}
+
+.icon-box .icon {
+  background-color: #e6f7ff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  width: 60px;
+  margin-bottom: 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.icon-box .icon i {
+  font-size: 42px;
+  line-height: 1;
+  color: #64d2dc;
+  transition: 0.5s;
+}
+
+.icon-box:hover .icon i {
+  color: #fff;
+}
+
+.icon-box .title {
+  text-align: left;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.icon-box .description {
+  text-align: left;
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.icon-box:hover {
+  transform: translateY(-10px);
+}
+
+@media (max-width: 991px) {
+  .icon-box {
+    padding: 20px;
+  }
+
+  .content {
+    margin-top: 3gi0px;
+  }
+}
+
+.problem .static-image {
+  display: flex;
+}
+
+.problem .static-image img {
+  margin-top: -30px;
+  border-radius: 20px;
+  width: 88%;
+  height: auto;
+}
+
+.problem .row {
+  margin-bottom: -50px;
+}
+
+
 
 
 /*--------------------------------------------------------------
