--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -898,19 +898,19 @@ section {
     padding: 20px;
   }
 
-  .content {
-    margin-top: 3gi0px;
+  .static-image {
+    text-align: left;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-left: 20px;
   }
-}
 
-.problem .static-image {
-  display: flex;
 }
 
 .problem .static-image img {
-  margin-top: -30px;
-  border-radius: 20px;
   width: 88%;
+  border-radius: 10px;
+  padding-left: 5px;
   height: auto;
 }
 
@@ -918,7 +918,9 @@ section {
   margin-bottom: -50px;
 }
 
-
+.problem .container {
+  margin-bottom: 20px;
+}
 
 
 /*--------------------------------------------------------------
@@ -936,6 +938,7 @@ section {
 .issues .container {
 	display: flex;
 	flex-direction: row;
+  
 }
 
 /* Left column */
