--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -898,19 +898,24 @@ section {
     padding: 20px;
   }
 
-  .static-image {
-    margin-top: 40px;
+
+  .problem .static-image img {
+    height: auto;
+    max-width: 100%;
+    height: 100%;
     margin-bottom: 30px;
   }
-
 }
 
 .problem .static-image img {
   width: 88%;
-  border-radius: 10px;
+  border-radius: 20px;
+  margin-top: -20px;
   padding-left: 5px;
-  height: auto;
+  height: 720px;
 }
+
+
 
 .problem .row {
   margin-bottom: -50px;
